ecmascript/parser/tests/test262-error-references/fail/2f95824f19005b11.js.stderr
error: Unexpected token Some(DotDotDot)
 --> $DIR/tests/test262-parser/fail/2f95824f19005b11.js:1:19
  |
1 | var a = { set foo(...v) {} };
  |                   ^^^

